environments/test/frontend/sg.tf
resource "aws_security_group_rule" "ingress-443" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.frontend-server.sg_id
  description       = "HTTPS from anywhere to frontend"
}

resource "aws_security_group_rule" "ingress-80" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.frontend-server.sg_id
  description       = "HTTP from anywhere to frontend"
}

resource "aws_security_group_rule" "ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.frontend-server.sg_id
  description       = "SSH from anywhere to frontend"
}
